-Added TODO file
-Added JNLP file and ant build support
-Added initial layout custimization support. Can choose horizontal
 or vertical layout. Only works for 2 data panels currently
-Fixed subsecond time display
-Added timezone to location display
-Added full support for x vs. y plotting
-Much better labeling for charts (legend)
-Set autoscaling to always include 0
-Fixed time axis to always be duration with (even without enough data)
-Created base data panel class with common control bar for all data panels
-Complete redesign of data backend. Completely thread safe and better performance.
-Fix retry connection logic
-Fix full screen mode and add support for platforms that don't support it
-Put icons in jar file for applet and jnlp to load
-Fixed bug in channel list when sources are added/removed
-Remove uneeded connections to server when removing a channel for viewing
-Added warnings when try to add channels when the viewer doesn't support them (or that many)
-Fixed JFreeChart panel behaviour when adding the same channel
-Removed non functional menus and changed some key bindings (see KEYBOARD)
-Added command line parameters
-Fixed cases where control panel would set the player location when it shouldn't
-Fix more spurious ineraction of control panel and player

1.0.1 - September 23, 2004
-Add tooltips for control panel buttons
-Fixed bug is behaviour when switching from stopped to loading after monitoring
-Added better indicator for domain in status bar
-Made more sensible choice for possible domain bar values
-In JPEGDataPanel added ability change text color to white or black. Click the
 upper left hand corner of the panel to toggle the color.
-Implemented rudimentary image scaling in JPEGDataPanel. Will resize image (by 1/2, 1, or 2) based on panel size.
-Better cleanup of server connection on exit
-Fixed startup bug when no server is specified

1.0.0 - September 21, 2004
-Initial public release

0.9.9 - September 16, 2004
-Internal beta release